# tradesformer

./: .gitignore  README.md  fundamental_w_ai.md  gpu.py  hello.py  hyperparameters.md  margin.py  pyproject.toml  pyproject.toml-backup
data/: EURUSD_2022_13 copy.csv  weekly_data_week_1.csv  weekly_data_week_2.csv  weekly_data_week_3.csv  weekly_data_week_4.csv  weekly_data_week_5.csv  weekly_data_week_6.csv  weekly_data_week_7.csv  weekly_data_week_8.csv  weekly_data_week_9.csv  yahoo-EURUSD-2024-07-24-2024-09-21-5m.csv  yahoo-EURUSD-2024-07-25-2024-09-23-5m.csv
data/log/: 20240922123859.csv  20240922125248.csv  20240922125615.csv  20240922130223.csv  20240922213635.csv  20240922215015.csv  20240923092616.csv
data/raw/: source.md
data/split/GBPUSD/weekly/: GBPUSD_2022_0.csv  GBPUSD_2022_1.csv  GBPUSD_2022_10.csv  GBPUSD_2022_11.csv  GBPUSD_2022_12.csv  GBPUSD_2022_13.csv  GBPUSD_2022_14.csv  GBPUSD_2022_15.csv  GBPUSD_2022_16.csv  GBPUSD_2022_17.csv  GBPUSD_2022_18.csv  GBPUSD_2022_19.csv  GBPUSD_2022_2.csv  GBPUSD_2022_20.csv  GBPUSD_2022_21.csv  GBPUSD_2022_22.csv  GBPUSD_2022_23.csv  GBPUSD_2022_24.csv  GBPUSD_2022_25.csv  GBPUSD_2022_26.csv  GBPUSD_2022_27.csv  GBPUSD_2022_28.csv  GBPUSD_2022_29.csv  GBPUSD_2022_3.csv  GBPUSD_2022_30.csv  GBPUSD_2022_31.csv  GBPUSD_2022_32.csv  GBPUSD_2022_33.csv  GBPUSD_2022_34.csv  GBPUSD_2022_35.csv  GBPUSD_2022_36.csv  GBPUSD_2022_37.csv  GBPUSD_2022_38.csv  GBPUSD_2022_39.csv  (+106 more)
doc/: action_aggregation_strategy.md  dynamic_pt_sl.md  todo.md
model/ppo_forex_transformer_week_8/: data  policy.pth  system_info.txt
src/: README.md  alpha_vantage.py  configure.json  data_processor.py  eval.py  normalize.py  ppo_model.py  tech_inds.py  trading_gym.py  trading_gym_env.py  training.py  training_single_test.py  weekly.py  yahoo-data.py
src/util/: action_aggregation.py  action_enum.py  data_loading.py  log_render.py  logger_config.py  plot_chart.py  read_config.py  rewards.py  trading_gym.py  training_callback.py  transaction.py
test/: testpad.py
