[tool.poetry]
name = "tradesformer"
version = "0.1.0"
description = ""
authors = ["paulg <cove9988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
stable-baselines3 = "^2.3.2"
tensorboard = "^2.17.1"
mplfinance = "^0.12.10b0"
finta = "^1.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
