[project]
name = "tradesformer"
version ="0.2.1"
license = "MIT"  
repository = "https://github.com/cove9988/tradesformer"
authors = ["paulg <cove9988@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finta>=1.3",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "stable-baselines3>=2.3.2",
    "torch>=2.5.1",
]
